src/app/pages/home-page/home-page.component.scss
@import '../../../styles.scss';
@import url('https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap');

.bg-crink {
  background: url('../../../assets/img/home-bg.jpeg') no-repeat;
  position: relative;
  border-bottom-left-radius: 13rem;
  background-size: cover;
  background-position: center;
}

.app-badge {
  height: 60px;
}

.bg-brown-cover {
  background-color: rgba(185, 108, 84, 0.8);
  border-bottom-left-radius: 13rem;
  padding-top: 10rem;
}

.baseline-title {
  font-family: 'Bebas Neue', cursive;
  font-size: 50px;
  letter-spacing: 3px;
}

.baseline-text {
  font-size: 22px;
  letter-spacing: 1px;
}

.section-title {
  font-family: 'Bebas Neue', cursive;
  font-size: 34px;
  letter-spacing: 2px;
}

.my-high {
  margin-top: 6.5rem;
  margin-bottom: 6.5rem;
}

.py-high {
  padding-top: 6.5rem;
  padding-bottom: 6.5rem;
}

.bg-lightgrey {
  background-color: $lightGreyColor;
}

.list-style {
  list-style: url('../../../assets/icon/check-icon.png');
}

.features-section {
  border-top-right-radius: 13rem;
}

.btn-join {
  border: 3px solid $mainColor;
  background-color: #fff;
  color: $mainColor;
  padding: 10px 18px;
  font-size: 20px;
  font-family: 'Bebas Neue', cursive;
  letter-spacing: 2px;
  transition: 0.4s;
}

.btn-join:hover {
  border: 3px solid $darkColor;
  color: $darkColor;
  transform: translate3d(0,-2px,0);
  box-shadow: 0 2px 5px 0 rgba(0,0,0,.1), 0 14px 6px 0 rgba(0,0,0,.25);
}

.newsletter-bg {
  background: url('../../../assets/icon/newsletter-bg.svg') repeat center #fff;
  background-size: 16rem;
  overflow: hidden;
}

.btn-newsletter {
  border: 3px solid $mainColor;
  background-color: #fff;
  color: $mainColor;
  transition: 0.4s;
}

.btn-newsletter:hover {
  border: 3px solid $darkColor;
  color: $darkColor;
  transform: translate3d(0,-2px,0);
  box-shadow: 0 2px 5px 0 rgba(0,0,0,.1), 0 14px 6px 0 rgba(0,0,0,.25);
}

.w-newsletter {
  width: 60%;
}

.cursor-default {
  cursor: default!important;
}

button[name="sendemail"] {
  transition: 0.4s;
}

.loading-spin {
  width: 18px;
  height: 18px;
  animation-name: spin;
  border-radius: 50%;
  box-shadow: 0px 1px 0px #6c757d;
  animation-duration: 2000ms;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}

.pretty {
  white-space: normal;
  width: 100%;
}

.pretty .state label {
  text-indent: 0;
  padding-left: 2rem;
}

.pretty .state label:after,
.pretty .state label:before,
.pretty.p-icon .state .icon {
  top: 0;
}

@keyframes spin {
  from {
      transform:rotate(0deg);
  }
  to {
      transform:rotate(360deg);
  }
}

.search-filter,
.share-knowledge {
  margin-top: -3rem;
}

.search-filter {
  z-index: 100;
  position: relative;
  box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
}



@media(max-width: 1199px) {
  .search-filter {
    margin-top: -1.5rem;
  }

  .share-knowledge {
    margin-top: -4.5rem;
  }
}

@media(max-width: 991px) {
  .bg-brown-cover {
    padding-top: 5rem;
  }

  .search-filter {
    margin-top: 0;
  }

  .share-knowledge {
    margin-top: 0;
  }
}

@media(max-width: 767px) {
  .w-newsletter {
    width: 75%;
  }

  .bg-crink,
  .bg-brown-cover {
    border-bottom-left-radius: 0rem;
  }

  .bg-crink {
    background-position: inherit;
  }

  .features-section {
    border-top-right-radius: 0rem;
  }
}

@media(max-width: 575px) {
  .w-newsletter {
    width: 90%;
  }

  .app-badge {
    height: 45px;
  }
}

